cmake_minimum_required(VERSION 3.6)
project(Chapter_6)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        "PracticePro 1.cpp"
#        "PracticePro 2.cpp"
#        "PracticePro 3.cpp"
#        "PracticePro 4.cpp"
#        "PracticePro 5.cpp"
#        "ProgrammingPro 1.cpp"
#        ProgrammingPro2.cpp
#        ProgrammingPro4.cpp
#        ProgrammingPro6.cpp
        )
add_executable(Chapter_6 ${SOURCE_FILES})